--- a/src/index.css
+++ b/src/index.css
@@ -54,11 +54,31 @@ color:whitesmoke;
 padding-left: 5%;    
 }
 
-.bgRegistro input
+.bgPerfil{  
+  background-image: url('../src/assets/images/perfil.jpg');
+  height: 87vh;      
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;   
+  font-size: 30px;
+  color:whitesmoke;
+  padding-left: 5%;    
+  }
+
+div.bgPerfil input
 {
   background-color: ghostwhite;
-  opacity: 70%;
+  opacity: 0.5; 
   color: black;
   font-weight: bolder;  
   font-size: x-large;
+   /* IE 8 */
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+   /* IE 5-7 */
+   filter: alpha(opacity=70); 
+   /* Netscape */
+   -moz-opacity: 0.5; 
+   /* Safari 1.x */
+   -khtml-opacity: 0.5;    
 }
+
