cambios de estetica en la pagina

--- a/src/index.css
+++ b/src/index.css
@@ -1,84 +1,83 @@
-body, html{
+body, html {
   height: 100%;
   font-family: 'Sofia';
-  }
-  .bg {
+}
+
+.bg {
   background-image: url('../src/assets/images/home-fondo.gif');
   height: 87vh;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;   
+  background-size: cover;
   font-size: 30px;
   color: white;
   padding-left: 5%;
-  }
-
-  .bgLogin {
-    background-image: url('../src/assets/images/362551_1_600.jpeg');
-    height: 87vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;  
-    }
-
-    .bgProductos{  
-    background-image: url('../src/assets/images/productos-fondo.jpg');
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;   
-    font-size: 17px;
-    color: white;
-    padding-left: 5%;    
-    }
-    
-    
-    .bgNotFound{  
-      background-image: url('../src/assets/images/404.gif');
-      height: 100vh;      
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;   
-      font-size: 30px;
-      color:black;
-      padding-left: 5%;    
-      }
-.bgRegistro{  
-background-image: url('../src/assets/images/camarera.jpg');
-height: 87vh;      
-background-position: center;
-background-repeat: no-repeat;
-background-size: cover;   
-font-size: 30px;
-color:whitesmoke;
-padding-left: 5%;    
 }
 
-.bgPerfil{  
-  background-image: url('../src/assets/images/perfil.jpg');
-  height: 87vh;      
+.bgLogin {
+  background-image: url('../src/assets/images/362551_1_600.jpeg');
+  height: 87vh;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;   
-  font-size: 30px;
-  color:whitesmoke;
-  padding-left: 5%;    
-  }
-
-div.bgPerfil input
-{
-  background-color: ghostwhite;
-  opacity: 0.5; 
-  color: black;
-  font-weight: bolder;  
-  font-size: x-large;
-   /* IE 8 */
-   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-   /* IE 5-7 */
-   filter: alpha(opacity=70); 
-   /* Netscape */
-   -moz-opacity: 0.5; 
-   /* Safari 1.x */
-   -khtml-opacity: 0.5;    
+  background-size: cover;
 }
 
+.bgProductos {
+  background-image: url('../src/assets/images/productos-fondo.jpg');
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 17px;
+  color: white;
+  padding-left: 5%;
+}
+
+.bgNotFound {
+  background-image: url('../src/assets/images/404.gif');
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 30px;
+  color: black;
+  padding-left: 5%;
+}
+
+.bgRegistro {
+  background-image: url('../src/assets/images/camarera.jpg');
+  height: 87vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 30px;
+  color: whitesmoke;
+  padding-left: 5%;
+}
+
+.bgPerfil {
+  background-image: url('../src/assets/images/perfil.jpg');
+  height: 87vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 30px;
+  color: whitesmoke;
+  padding-left: 5%;
+}
+
+div.inputOpacity input {
+  background-color: ghostwhite;
+  opacity: 0.5;
+  color: black;
+  font-weight: bolder;
+  font-size: x-large;
+  /* IE 8 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  /* IE 5-7 */
+  filter: alpha(opacity=70);
+  /* Netscape */
+  -moz-opacity: 0.5;
+  /* Safari 1.x */
+  -khtml-opacity: 0.5;
+}
